--- a/styles/home.sass
+++ b/styles/home.sass
@@ -1,15 +1,89 @@
+@mixin p($property, $val)
+  -webkit-#{$property}: $val
+  -moz-#{$property}: $val
+  -ms-#{$property}: $val
+  #{$property}: $val
+
+
+// General
 body
   margin: 0
-  background-color: #394039
-  color: black
+  background-color: #BAB5A9
+  color: yellow
+  text-align: center
   padding: 1em
   font-family: 'LifeT-ReguRo1', serif
-  font-size: 24px
+  font-size: 28px
   padding: 0
+  max-width: 600px
+  margin: auto
+  letter-spacing:
+  +p(font-smoothing, antialiased)
 
-header
-  text-align: center
-  margin: 20px
+a
+  text-decoration: none
+  color: yellow
+  &:hover
+    color: white
+
+.sm
+  font-size: 16px
+  margin-top: 5px
 
 p
   margin: 0
+
+// Background
+.box
+  position: fixed
+  width: 100%
+  height: 100%
+  top: 0
+  left: 0
+
+.dot
+  width: 10px
+  height: 10px
+  border-radius: 50%
+  background-color: yellow
+  position: fixed
+  z-index: 100
+  margin: 15px
+
+.tl
+  top: 0
+  left: 0
+
+.tr
+  top: 0
+  right: 0
+
+.bl
+  bottom: 0
+  left: 0
+
+.br
+  bottom: 0
+  right: 0
+
+
+
+
+
+
+// Content
+header
+  padding-top: 10px
+
+span
+  margin: 0 15px
+
+.block
+  margin-bottom: 20px
+
+.foot
+  position: fixed
+  bottom: 10px
+  margin: auto
+  width: 100%
+  text-align: center
