--- a/styles/home.sass
+++ b/styles/home.sass
@@ -87,3 +87,12 @@ span
   margin: auto
   width: 100%
   text-align: center
+
+
+// Mobile
+
+@media only screen and (max-width: 800px)
+
+  .block
+    max-width: calc(100vw - 80px)
+    margin: 0 auto 20px
