--- a/styles/home.sass
+++ b/styles/home.sass
@@ -9,11 +9,11 @@
 body
   margin: 0
   background-color: #BAB5A9
-  color: yellow
+  color: black
   text-align: center
   padding: 1em
   font-family: 'LifeT-ReguRo1', serif
-  font-size: 28px
+  font-size: 24px
   padding: 0
   max-width: 600px
   margin: auto
@@ -22,77 +22,19 @@ body
 
 a
   text-decoration: none
-  color: yellow
+  color: black
   &:hover
     color: white
 
-.sm
-  font-size: 16px
-  margin-top: 5px
-
-p
-  margin: 0
-
-// Background
-.box
+.head
   position: fixed
-  width: 100%
-  height: 100%
-  top: 0
-  left: 0
+  top: 20px
+  left: 50%
+  +p(transform, translateX(-50%))
 
-.dot
-  width: 10px
-  height: 10px
-  border-radius: 50%
-  background-color: yellow
+
+.mail
   position: fixed
-  z-index: 100
-  margin: 15px
-
-.tl
-  top: 0
-  left: 0
-
-.tr
-  top: 0
-  right: 0
-
-.bl
-  bottom: 0
-  left: 0
-
-.br
-  bottom: 0
-  right: 0
-
-
-
-
-
-
-// Content
-header
-  padding-top: 10px
-
-span
-  margin: 0 15px
-
-.block
-  margin-bottom: 20px
-
-.foot
-  position: fixed
-  bottom: 10px
-  margin: auto
-  width: 100%
-  text-align: center
-
-
-// Mobile
-
-@media only screen and (max-width: 800px)
-
-  .block
-    max-width: calc(100vw - 80px)
-    margin: 0 auto 20px
+  bottom: 20px
+  left: 50%
+  +p(transform, translateX(-50%))
