--- a/styles/home.sass
+++ b/styles/home.sass
@@ -1,40 +1,47 @@
-@mixin p($property, $val)
-  -webkit-#{$property}: $val
-  -moz-#{$property}: $val
-  -ms-#{$property}: $val
-  #{$property}: $val
-
+@mixin p($property, $val) {
+  -webkit-#{$property}: $val;
+  -moz-#{$property}: $val;
+  -ms-#{$property}: $val;
+  #{$property}: $val;
+}
 
 // General
-body
-  margin: 0
-  background-color: #BAB5A9
-  color: black
-  text-align: center
-  padding: 1em
-  font-family: 'LifeT-ReguRo1', serif
-  font-size: 24px
-  padding: 0
-  max-width: 600px
-  margin: auto
-  letter-spacing:
-  +p(font-smoothing, antialiased)
+body {
+  margin: 0;
+  background-color: #BAB5A9;
+  color: black;
+  text-align: center;
+  padding: 1em;
+  font-family: "LifeT-ReguRo1", serif;
+  font-size: 24px;
+  padding: 0;
+  max-width: 600px;
+  margin: auto;
 
-a
-  text-decoration: none
-  color: black
-  &:hover
-    color: white
+  @include p(font-smoothing, antialiased);
+}
 
-.head
-  position: fixed
-  top: 20px
-  left: 50%
-  +p(transform, translateX(-50%))
+a {
+  text-decoration: none;
+  color: black;
 
+  &:hover {
+    color: white;
+  }
+}
 
-.mail
-  position: fixed
-  bottom: 20px
-  left: 50%
-  +p(transform, translateX(-50%))
+.head {
+  position: fixed;
+  top: 20px;
+  left: 50%;
+
+  @include p(transform, translateX(-50%));
+}
+
+.mail {
+  position: fixed;
+  bottom: 20px;
+  left: 50%;
+
+  @include p(transform, translateX(-50%));
+}
