--- a/styles/home.scss
+++ b/styles/home.scss
@@ -7,7 +7,7 @@
 
 // General
 body {
-    margin: 15px;
+    margin: 20px 30px;
     color: black;
     font-family: "LifeT-ReguRo1", serif;
     font-size: 2.4vw;
@@ -71,6 +71,15 @@ section {
   }
   h1 {
     font-size: 2.5vh;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  body {
+     font-size: 44px;
+  }
+  h1 {
+    font-size: 24px;
   }
 }
 
