--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -19,25 +19,27 @@ body {
     letter-spacing: -0.02rem;
     padding: 0;
     @include p(font-smoothing, antialiased);
+    &.home {
+      background-color: #51461F;
+    }
 }
 
 h1 {
   font-family: 'Life-Bol';
   font-size: 30px;
-  line-height: 1.2em;
+  line-height: 1em;
+  margin: 0;
   font-weight: normal;
-  margin: 0 0 0.2rem;
 }
 
 h2 {
   font-family: 'LifeSC-Reg';
   font-size: 22px;
   line-height: 1em;
-  margin: 0 0 0.2rem;
+  margin: 30px 0 0 0;
   font-weight: normal;
   letter-spacing: 0.1rem;
   text-transform: lowercase;
-  margin-top: 40px;
   text-align: left;
 }
 
@@ -54,6 +56,19 @@ a, li {
 p {
   margin: 0;
   max-width: 30em;
+}
+
+.bg {
+  width: 92vw;
+  height: 92vh;
+  position: fixed;
+  top: 4vh;
+  left: 4vw;
+  border: 3px solid black;
+  border-radius: 50%;
+  box-shadow: 5px 10px;
+  z-index: -100;
+  background-color: #51461F;
 }
 
 
