--- a/assets/css/_webfonts.scss
+++ b/assets/css/_webfonts.scss
@@ -57,4 +57,6 @@
  
   
 @font-face {font-family: 'Life-RegIta';src: url('webfonts/37D1C3_4_0.eot');src: url('webfonts/37D1C3_4_0.eot?#iefix') format('embedded-opentype'),url('webfonts/37D1C3_4_0.woff2') format('woff2'),url('webfonts/37D1C3_4_0.woff') format('woff'),url('webfonts/37D1C3_4_0.ttf') format('truetype');}
- 
+
+
+@font-face {font-family: 'Theinhardt';src: url('webfonts/Theinhardt-Medium.wof') format('woff');src: url('webfonts/Theinhardt-Medium.otf') format('opentype');}
