--- a/assets/css/MyFontsWebfontsKit.css
+++ b/assets/css/MyFontsWebfontsKit.css
@@ -57,4 +57,9 @@
  
   
 @font-face {font-family: 'Life-RegIta';src: url('webfonts/37D1C3_4_0.eot');src: url('webfonts/37D1C3_4_0.eot?#iefix') format('embedded-opentype'),url('webfonts/37D1C3_4_0.woff2') format('woff2'),url('webfonts/37D1C3_4_0.woff') format('woff'),url('webfonts/37D1C3_4_0.ttf') format('truetype');}
+
  
+@import url("//hello.myfonts.net/count/2c3be8");
+
+  
+@font-face {font-family: 'UniversLTPro-55Roman';src: url('webfonts/2C3BE8_0_0.eot');src: url('webfonts/2C3BE8_0_0.eot?#iefix') format('embedded-opentype'),url('webfonts/2C3BE8_0_0.woff') format('woff'),url('webfonts/2C3BE8_0_0.ttf') format('truetype');}
