--- a/assets/css/_webfonts.scss
+++ b/assets/css/_webfonts.scss
@@ -42,6 +42,7 @@
 
 /* @import must be at top of file, otherwise CSS will not work */
 @import url("//hello.myfonts.net/count/37d1c3");
+@import url("//hello.myfonts.net/count/2c3be8");
 
   
 @font-face {font-family: 'LifeSC-Reg';src: url('webfonts/37D1C3_0_0.eot');src: url('webfonts/37D1C3_0_0.eot?#iefix') format('embedded-opentype'),url('webfonts/37D1C3_0_0.woff2') format('woff2'),url('webfonts/37D1C3_0_0.woff') format('woff'),url('webfonts/37D1C3_0_0.ttf') format('truetype');}
@@ -60,3 +61,5 @@
 
 
 @font-face {font-family: 'Theinhardt';src: url('webfonts/Theinhardt-Medium.wof') format('woff');src: url('webfonts/Theinhardt-Medium.otf') format('opentype');}
+
+@font-face {font-family: 'UniversLTPro-55Roman';src: url('webfonts/2C3BE8_0_0.eot');src: url('webfonts/2C3BE8_0_0.eot?#iefix') format('embedded-opentype'),url('webfonts/2C3BE8_0_0.woff') format('woff'),url('webfonts/2C3BE8_0_0.ttf') format('truetype');}
