--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -6,9 +6,9 @@
 }
 
 @import "webfonts";
-$font-lg: 28px;
+$font-lg: 24px;
 $font-md: 20px;
-$font-sm: 18px;
+$font-sm: 16px;
 // General
 body {
   color: black;
@@ -17,35 +17,27 @@ body {
   font-family: "LifeT-ReguRo1", serif;
   font-size: $font-md;
   line-height: 1.34em;
-  letter-spacing: -0.02rem;
   padding: 0;
+  letter-spacing: 0.015em;
   @include p(font-smoothing, antialiased);
-  &.home {
-    background-color: #25301B;
-  }
 }
 
 h1 {
   font-family: 'Life-Reg', serif;
   font-size: $font-lg;
   line-height: 1.2em;
-  margin: 0 10px 0 0;
-  width: auto;
-  max-width: 26em;
+  margin: 4px 10px 0 0;
+  width: 26em;
   font-weight: normal;
-  b {
-    font-family: 'Life-Bol', serif;
-    font-weight: normal;
-  }
 }
 
 h2 {
-  font-family: 'Theinhardt';
+  font-family: 'UniversLTPro-55Roman', Arial, Helvetica, sans-serif;
   font-size: $font-sm;
-  margin: 25px 0 5px; // letter-spacing: 0.02em;
+  margin: 25px 0 5px;
   line-height: 1em;
-  font-weight: normal; // letter-spacing: 0.03rem;
-  // text-transform: lowercase;
+  letter-spacing: 0.015em;
+  font-weight: normal;
   text-align: left;
 }
 
@@ -67,22 +59,54 @@ p {
 
 // Layout
 header {
-  z-index: 100;
-  width: calc( 100vw - 60px);
-  height: calc( 100vh - 60px);
-  margin: 30px;
+  z-index: 1000;
+  width: calc( 100vw - 120px);
+  height: calc( 100vh - 120px);
+  padding: 55px 60px 60px 60px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  position: fixed;
+  top: 0;
+  left: 0;
+  @include p(transition, all 200ms ease);
+  &.fade {
+    opacity: 0;
+    pointer-events: none;
+    @include p(transition, all 200ms ease);
+  }
 }
 
-.contact {
-  position: absolute;
-  bottom: 0;
+h1.name {
+  margin: 0;
+}
+
+a.contact {
+  margin: 0 40px 0 0;
+  width: 100%;
+}
+
+.menu {
+  position: fixed;
+  top: 55px;
+  right: 60px;
+  z-index: 2000;
+  text-align: right;
+  cursor: pointer;
+  h1.open::after {
+    content: "Info";
+  }
+  h1.close::after {
+    content: "Close";
+  }
 }
 
 section {
-  margin: 120px 30px 0;
+  margin: 120px 60px 0;
+  padding-top: 30px;
+  &:first-of-type {
+    margin-top: 100vh;
+  }
   .slider {
     width: 100%;
     text-align: center;
@@ -91,7 +115,7 @@ section {
       height: 70vh;
       max-height: 1000px;
       width: auto;
-      margin:20px auto 40px;
+      margin: 20px auto 40px;
     }
   }
 }
@@ -103,13 +127,14 @@ section {
 }
 
 .bg {
-  flex-grow: 1;
-  border: 3px solid black;
-  margin: 20px 0 0;
-  border-radius: 50%;
-  box-shadow: 5px 10px 2px;
+  position: fixed;
+  background-color: #e8e3d9;
+  width: calc(100vw - 20px);
+  height: calc(100vh - 20px);
+  // border: 1px solid black;
+  border-radius: 7vh;
+  margin: 10px;
   z-index: -100;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  top: 0;
+  left: 0;
 }
