--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -29,6 +29,10 @@ h1 {
   margin: 4px 10px 0 0;
   width: 26em;
   font-weight: normal;
+  b {
+    font-family: 'Life-Bol', 'Times New Roman', Times, serif;
+    font-weight: normal;
+  }
 }
 
 h2 {
