--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -19,6 +19,8 @@ body {
   line-height: 1.34em;
   padding: 0;
   letter-spacing: 0.015em;
+  width: 100%;
+  height: 100%;
   @include p(font-smoothing, antialiased);
 }
 
@@ -58,7 +60,7 @@ li {
 
 p {
   margin: 0 0 10px;
-  max-width: 36em;
+  max-width: 40em;
 }
 
 // Layout
@@ -68,6 +70,7 @@ header {
   height: calc( 100vh - 120px);
   padding: 55px 60px 60px 60px;
   display: flex;
+  color: white;
   flex-direction: column;
   justify-content: space-between;
   position: fixed;
@@ -78,6 +81,9 @@ header {
     opacity: 0;
     pointer-events: none;
     @include p(transition, all 200ms ease);
+  }
+  a {
+    color: white;
   }
 }
 
@@ -97,29 +103,73 @@ a.contact {
   z-index: 2000;
   text-align: right;
   cursor: pointer;
+  h1 {
+    margin: 4px 0 0 0;
+  }
   h1.open::after {
     content: "Info";
   }
   h1.close::after {
     content: "Close";
+    color: white;
   }
 }
 
 section {
   margin: 120px 60px 0;
   padding-top: 30px;
+  position: relative;
   &:first-of-type {
     margin-top: 100vh;
   }
   .slider {
     width: 100%;
+    height: auto;
     text-align: center;
-    img {
-      margin: auto;
-      height: 70vh;
-      max-height: 1000px;
-      width: auto;
-      margin: 20px auto 40px;
+    margin: 20px 0 40px;
+    display: block;
+    position: relative;
+    .controls {
+      position: absolute;
+      z-index: 10;
+      width: 100%;
+      top: 0px;
+      bottom: 0px;
+      display: flex;
+      align-self: stretch;
+      .prev {
+        height: 100%;
+        width: 50%;
+        cursor: w-resize;
+      }
+      .next {
+        height: 100%;
+        width: 50%;
+        cursor: e-resize;
+      }
+    }
+    .slide {
+      display: none;
+      &.show {
+        display: block;
+      }
+      img {
+        margin: auto;
+        display: block;
+        height: 70vh;
+        max-height: 1000px;
+        width: auto;
+        margin: 0 auto 10px;
+      }
+      .info {
+        display: flex;
+        justify-content: center;
+        h2 {
+          text-align: center;
+          margin: 0 10px;
+        }
+      }
+      
     }
   }
 }
@@ -132,11 +182,10 @@ section {
 
 .bg {
   position: fixed;
-  background-color: #e8e3d9;
+  background-color: #e8dcbf;
   width: calc(100vw - 20px);
-  height: calc(100vh - 20px);
-  // border: 1px solid black;
-  border-radius: 7vh;
+  height: calc(100vh - 20px); // border: 1px solid black;
+  border-radius: 8vh;
   margin: 10px;
   z-index: -100;
   top: 0;
