--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -8,7 +8,7 @@
 @import "webfonts";
 $font-lg: 30px;
 $font-md: 20px;
-$font-sm: 16px;
+$font-sm: 18px;
 // General
 body {
   color: black;
@@ -16,7 +16,7 @@ body {
   margin: 0;
   font-family: "LifeT-ReguRo1", serif;
   font-size: $font-md;
-  line-height: 1.34em;
+  line-height: 1.5em;
   padding: 0;
   letter-spacing: 0.015em;
   width: 100%;
@@ -66,9 +66,9 @@ p {
 // Layout
 header {
   z-index: 1000;
-  width: calc( 100vw - 120px);
-  min-height: calc( 100vh - 120px);
-  padding: 55px 60px;
+  width: calc( 100vw - 160px);
+  min-height: calc( 100vh - 140px);
+  padding: 75px 80px 55px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -177,11 +177,11 @@ section {
 
 .bg {
   position: fixed;
-  background-color: #faf1e4;
-  width: calc(100vw - 20px);
-  height: calc(100vh - 20px); // border: 1px solid black;
-  border-radius: 8vh;
-  margin: 10px;
+  border: 3px solid #faf1e4;
+  width: calc(100vw - 40px);
+  height: calc(100vh - 40px); // border: 1px solid black;
+  border-radius: 60px;
+  margin: 20px;
   z-index: -100;
   top: 0;
   left: 0;
