--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -6,7 +6,7 @@
 }
 
 @import "webfonts";
-$font-lg: 30px;
+$font-lg: 26px;
 $font-md: 20px;
 $font-sm: 18px;
 // General
@@ -27,9 +27,9 @@ body {
 h1 {
   font-family: 'Life-Reg', serif;
   font-size: $font-lg;
-  line-height: 1.2em;
+  line-height: 1.25em;
   margin: 4px 10px 0 0;
-  width: 26em;
+  max-width: 26em;
   font-weight: normal;
   b {
     font-family: 'Life-Bol', 'Times New Roman', Times, serif;
@@ -38,6 +38,10 @@ h1 {
 }
 
 h2 {
+  @extend %h2;
+}
+
+%h2 {
   font-family: 'UniversLTPro-55Roman', Arial, Helvetica, sans-serif;
   font-size: $font-sm;
   margin: 25px 0 5px;
@@ -60,15 +64,16 @@ li {
 
 p {
   margin: 10px 0;
-  max-width: 32em;
+  max-width: 36em;
 }
 
 // Layout
 header {
   z-index: 1000;
-  width: calc( 100vw - 160px);
-  min-height: calc( 100vh - 140px);
-  padding: 75px 80px 55px;
+  width: calc( 100vw - 80px);
+  min-height: calc( 100vh - 60px);
+  background-color: #f2f2f2;
+  padding: 30px 40px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -81,20 +86,32 @@ header {
     pointer-events: none;
     @include p(transition, all 200ms ease);
   }
+  .name {
+    display: inline-block;
+    vertical-align: top;
+    margin: 0 40px 5px 0;
+  }
+  .bio {
+    display: inline-block;
+    margin-top: 0;
+  }
 }
+
 
 p.contact {
   max-width: 100%;
+  margin: 0 30px 0 0;
+  width:auto;
 }
-a.contact {
-  margin: 0 0 0 30px;
-  width: 100%;
+.contact {
+  margin: 10px 30px 0 0;
+  display: inline-block;
 }
 
 .menu {
   position: fixed;
-  top: 55px;
-  right: 60px;
+  top: 20px;
+  right: 30px;
   z-index: 2000;
   text-align: right;
   cursor: pointer;
@@ -106,12 +123,11 @@ a.contact {
   }
   h1.close::after {
     content: "Close";
-    color: white;
   }
 }
 
 section {
-  margin: 120px 60px 0;
+  margin: 120px 40px 0;
   padding-top: 30px;
   position: relative;
   &:first-of-type {
@@ -164,8 +180,11 @@ section {
           margin: 0 10px;
         }
       }
-      
     }
+  }
+  .date {
+    @extend %h2;
+    padding-left: 30px;
   }
 }
 
@@ -177,11 +196,11 @@ section {
 
 .bg {
   position: fixed;
-  border: 3px solid #faf1e4;
-  width: calc(100vw - 40px);
-  height: calc(100vh - 40px); // border: 1px solid black;
+  // border: 3px solid #faf1e4;
+  width: calc(100vw - 20px);
+  height: calc(100vh - 20px); // border: 1px solid black;
   border-radius: 60px;
-  margin: 20px;
+  margin: 10px;
   z-index: -100;
   top: 0;
   left: 0;
