--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -6,9 +6,10 @@
 }
 
 @import "webfonts";
-$font-lg: 26px;
+$font-lg: 28px;
 $font-md: 20px;
-$font-sm: 18px;
+$font-sm: 17px;
+
 // General
 body {
   color: black;
@@ -28,7 +29,7 @@ h1 {
   font-family: 'Life-Reg', serif;
   font-size: $font-lg;
   line-height: 1.25em;
-  margin: 4px 10px 0 0;
+  margin: 4px 10px 10px 0;
   max-width: 26em;
   font-weight: normal;
   b {
@@ -58,7 +59,7 @@ li {
   cursor: pointer;
   transition: all 0.3s;
   &:hover {
-    opacity: 0.2;
+    opacity: 0.5;
   }
 }
 
@@ -71,8 +72,9 @@ p {
 header {
   z-index: 1000;
   width: calc( 100vw - 80px);
-  min-height: calc( 100vh - 60px);
-  background-color: #f2f2f2;
+  min-height: calc( 50vh - 60px);
+  background-color: rgb(169, 182, 165);
+  color: #000;
   padding: 30px 40px;
   display: flex;
   flex-direction: column;
@@ -97,41 +99,45 @@ header {
   }
 }
 
+// footer
 
-p.contact {
-  max-width: 100%;
-  margin: 0 30px 0 0;
-  width:auto;
+.footer {
+  .contact {
+    margin: 10px 30px 0 0;
+    display: inline-block;
+    color: #000;
+  }
 }
-.contact {
-  margin: 10px 30px 0 0;
-  display: inline-block;
-}
+
 
 .menu {
   position: fixed;
-  top: 20px;
-  right: 30px;
+  top: 30px;
+  right: 40px;
   z-index: 2000;
   text-align: right;
   cursor: pointer;
-  h1 {
-    margin: 4px 0 0 0;
+  h2 {
+    margin: 15px 0 0;
   }
-  h1.open::after {
+  h2.open::after {
     content: "Info";
   }
-  h1.close::after {
+  h2.close::after {
     content: "Close";
+    color: #000;
   }
 }
 
 section {
-  margin: 120px 40px 0;
+  margin: 100px 40px 0;
   padding-top: 30px;
   position: relative;
   &:first-of-type {
-    margin-top: 100vh;
+    margin-top: calc( 100vh - 110px);
+  }
+  &:last-of-type {
+    margin-bottom: 40px;
   }
   .slider {
     width: 100%;
@@ -182,9 +188,13 @@ section {
       }
     }
   }
-  .date {
+  .date-left {
     @extend %h2;
     padding-left: 30px;
+  }
+  .date-right {
+    @extend %h2;
+    padding-right: 30px;
   }
 }
 
@@ -192,16 +202,4 @@ section {
   // body {
   //   font-size: 4vh;
   // }
-}
-
-.bg {
-  position: fixed;
-  // border: 3px solid #faf1e4;
-  width: calc(100vw - 20px);
-  height: calc(100vh - 20px); // border: 1px solid black;
-  border-radius: 60px;
-  margin: 10px;
-  z-index: -100;
-  top: 0;
-  left: 0;
 }
