--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -33,6 +33,7 @@ h1 {
   margin: 4px 10px 10px 0;
   max-width: 26em;
   font-weight: normal;
+
   b {
     font-family: 'Life-Bol', 'Times New Roman', Times, serif;
     font-weight: normal;
@@ -59,6 +60,7 @@ li {
   color: black;
   cursor: pointer;
   transition: all 0.3s;
+
   &:hover {
     opacity: 0.5;
   }
@@ -81,8 +83,8 @@ p {
 // Layout
 header {
   z-index: 1000;
-  width: calc( 100vw - 80px);
-  min-height: calc( 50vh - 60px);
+  width: calc(100vw - 80px);
+  min-height: calc(50vh - 60px);
   background-color: rgb(169, 182, 165);
   color: #000;
   padding: 30px 40px;
@@ -93,16 +95,19 @@ header {
   top: 0;
   left: 0;
   @include p(transition, all 200ms ease);
+
   &.fade {
     opacity: 0;
     pointer-events: none;
     @include p(transition, all 200ms ease);
   }
+
   .name {
     display: inline-block;
     vertical-align: top;
     margin: 0 40px 5px 0;
   }
+
   .bio {
     display: inline-block;
     margin-top: 0;
@@ -127,12 +132,15 @@ header {
   z-index: 2000;
   text-align: right;
   cursor: pointer;
+
   h2 {
     margin: 15px 0 0;
   }
+
   h2.open::after {
     content: "Info";
   }
+
   h2.close::after {
     content: "Close";
     color: #000;
@@ -143,19 +151,24 @@ section {
   margin: 100px 40px 0;
   padding-top: 30px;
   position: relative;
+
   &:first-of-type {
-    margin-top: calc( 100vh - 110px);
+    margin-top: calc(100vh - 110px);
   }
+
   &:last-of-type {
     margin-bottom: 40px;
   }
+
   img {
     width: 100%;
   }
+
   .date-left {
     @extend %h2;
     padding-left: 30px;
   }
+
   .date-right {
     @extend %h2;
     padding-right: 30px;
@@ -164,7 +177,36 @@ section {
 
 
 @media screen and (max-width: 800px) {
-  // body {
-  //   font-size: 4vh;
-  // }
+  $mobile-font-lg: 22px;
+  $mobile-font-md: 18px;
+  $mobile-font-sm: 15px;
+  $mobile-font-xs: 12px;
+
+  body {
+    font-size: $mobile-font-md;
+  }
+
+  h1 {
+    font-size: $mobile-font-lg;
+    margin-bottom: 0;
+  }
+
+  h2, .date-left, .date-right {
+    font-size: $mobile-font-sm !important;
+  }
+
+  .caption {
+    font-size: $mobile-font-xs;
+  }
+
+
+  header {
+    padding: 15px 20px;
+    width: calc(100vw - 40px);
+    min-height: calc(50vh - 30px);
+  }
+
+  section {
+    margin: 60px 20px 0;
+  }
 }
