--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -160,11 +160,15 @@ section {
     margin-bottom: 40px;
   }
 
-  img {
+  .img-wrapper {
     width: 100%;
     max-width: 1200px;
-    margin: 0 auto;
-    display: block;
+    overflow-x: scroll;
+    overflow-y: hidden;
+
+    img {
+      width: 100%;
+    }
   }
 
   .date-left {
@@ -194,8 +198,9 @@ section {
     margin-bottom: 0;
   }
 
-  h2{
+  h2 {
     font-size: $mobile-font-sm !important;
+    width: auto;
   }
 
   section .date-left {
@@ -221,4 +226,14 @@ section {
   section {
     margin: 60px 20px 0;
   }
+
+
+  .img-wrapper {
+    width: 100vw !important;
+    margin-left: -20px;
+    img {
+      width: 150vw !important;
+    }
+  }
+
 }
