--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -6,7 +6,7 @@
 }
 
 @import "webfonts";
-$font-lg: 28px;
+$font-lg: 26px;
 $font-md: 20px;
 $font-sm: 17px;
 $font-xs: 14px;
@@ -43,7 +43,7 @@ h1 {
 %h2 {
   font-family: 'UniversLTPro-55Roman', Arial, Helvetica, sans-serif;
   font-size: $font-sm;
-  margin: 15px 0 5px;
+  margin: 15px 0 15px;
   line-height: 1.25em;
   letter-spacing: 0.015em;
   font-weight: normal;
@@ -52,7 +52,13 @@ h1 {
 
 h2 {
   @extend %h2;
+  &.section-title {
+    padding: 0 0 10px;
+    // border-bottom: 1px solid black;
+    margin-bottom: 30px;
+  }
 }
+
 
 a,
 li {
@@ -80,7 +86,7 @@ p {
 }
 
 
-// Layout
+// Header
 header {
   z-index: 1000;
   width: calc(100vw - 80px);
@@ -114,17 +120,6 @@ header {
   }
 }
 
-// footer
-
-.footer {
-  .contact {
-    margin: 10px 30px 0 0;
-    display: inline-block;
-    color: #000;
-  }
-}
-
-
 .menu {
   position: fixed;
   top: 30px;
@@ -147,13 +142,26 @@ header {
   }
 }
 
+
+
+// Footer
+.footer {
+  .contact {
+    margin: 10px 30px 0 0;
+    display: inline-block;
+    color: #000;
+  }
+}
+
+
+// Layout
 section {
-  margin: 100px 40px 0;
+  margin: 0px 40px 60px;
   padding-top: 30px;
   position: relative;
 
-  &:first-of-type {
-    margin-top: calc(100vh - 110px);
+  &.first {
+    margin-top: calc(100vh - 1em - 80px);
   }
 
   &:last-of-type {
@@ -166,7 +174,7 @@ section {
     overflow-x: scroll;
     overflow-y: hidden;
 
-    img {
+    img, video {
       width: 100%;
     }
   }
@@ -181,6 +189,21 @@ section {
     padding-right: 30px;
   }
 }
+
+.case-study-wrapper {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-column-gap: 20px;
+  .case-study {
+    img {
+      background-color: lightgray;
+      width: 100%;
+      height: 200px;
+
+    }
+  }
+}
+
 
 
 @media screen and (max-width: 800px) {
