--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -53,7 +53,7 @@ h1 {
 h2 {
   @extend %h2;
   &.section-title {
-    padding: 0 0 10px;
+    padding: 45px 0 10px;
     // border-bottom: 1px solid black;
     margin-bottom: 30px;
   }
@@ -156,12 +156,12 @@ header {
 
 // Layout
 section {
-  margin: 0px 40px 60px;
+  margin: 0px 40px 30px;
   padding-top: 30px;
   position: relative;
 
   &.first {
-    margin-top: calc(100vh - 1em - 80px);
+    margin-top: 100vh;
   }
 
   &:last-of-type {
@@ -173,6 +173,7 @@ section {
     max-width: 1200px;
     overflow-x: scroll;
     overflow-y: hidden;
+    margin: 60px 0;
 
     img, video {
       width: 100%;
@@ -198,7 +199,6 @@ section {
     img {
       background-color: lightgray;
       width: 100%;
-      height: 200px;
 
     }
   }
