--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -90,7 +90,7 @@ header {
   z-index: 1000;
   width: calc(100vw - 80px);
   min-height: calc(50vh - 60px);
-  background-color: rgb(169, 182, 165);
+  background-color: #64805b;
   color: #000;
   padding: 30px 40px;
   display: flex;
