--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -84,6 +84,7 @@ p {
   grid-template-columns: 1fr 1fr 1fr 1fr;
   .span-2 {
     grid-column: span 2;
+    right: 0;
   }
 }
 
@@ -96,7 +97,7 @@ header {
   margin: 15px;
   line-height: 1em;
   color: #000;
-  padding: 0 40px;
+  padding: 5px 40px 7px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -112,7 +113,7 @@ header {
     border-radius: 50vh;
     filter: blur(10px);
     position: absolute;
-    background-color: #64805b;
+    background-color: #78c55f;
     width: 100%;
     height: 100%;
   }
